feat(model): align DB model on ReportNode API and adapt save methods