@@ -7,15 +7,16 @@
 package org.gridsuite.report.server;
 
 import com.google.common.collect.Lists;
-import com.powsybl.commons.report.*;
+import com.powsybl.commons.report.ReportNode;
+import com.powsybl.commons.report.ReportNodeAdder;
+import com.powsybl.commons.report.ReportNodeAdderOrBuilder;
+import com.powsybl.commons.report.TypedValue;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.NonNull;
 import org.apache.commons.lang3.StringUtils;
-import org.gridsuite.report.server.entities.ReportElementEntity;
-import org.gridsuite.report.server.entities.ReportEntity;
-import org.gridsuite.report.server.entities.ReportValueEmbeddable;
-import org.gridsuite.report.server.entities.TreeReportEntity;
+import org.gridsuite.report.server.entities.*;
 import org.gridsuite.report.server.repositories.ReportElementRepository;
+import org.gridsuite.report.server.repositories.ReportNodeRepository;
 import org.gridsuite.report.server.repositories.ReportRepository;
 import org.gridsuite.report.server.repositories.TreeReportRepository;
 import org.slf4j.Logger;
@@ -30,7 +31,6 @@ import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 
 /**
@@ -45,21 +45,7 @@ public class ReportService {
 
     // the maximum number of parameters allowed in an In query. Prevents the number of parameters to reach the maximum allowed (65,535)
     private static final int SQL_QUERY_MAX_PARAM_NUMBER = 10000;
-
-    /**
-     * @see TypedValue
-     */
-    public enum SeverityLevel {
-        UNKNOWN, TRACE, DEBUG, INFO, WARN, ERROR, FATAL;
-
-        public static SeverityLevel fromValue(String value) {
-            try {
-                return valueOf(value);
-            } catch (final IllegalArgumentException | NullPointerException e) {
-                return UNKNOWN;
-            }
-        }
-    }
+    private final ReportNodeRepository reportNodeRepository;
 
     public enum ReportNameMatchingType {
         EXACT_MATCHING, ENDS_WITH
@@ -75,19 +61,23 @@ public class ReportService {
     private final TreeReportRepository treeReportRepository;
     private final ReportElementRepository reportElementRepository;
 
-    public ReportService(final ReportRepository reportRepository, TreeReportRepository treeReportRepository, ReportElementRepository reportElementRepository) {
+    public ReportService(final ReportRepository reportRepository, TreeReportRepository treeReportRepository, ReportElementRepository reportElementRepository, ReportNodeRepository reportNodeRepository) {
         this.reportRepository = reportRepository;
         this.treeReportRepository = treeReportRepository;
         this.reportElementRepository = reportElementRepository;
+        this.reportNodeRepository = reportNodeRepository;
     }
 
     private static void addTypedValue(ReportValueEmbeddable value, ReportNodeAdderOrBuilder<ReportNodeAdder> adder) {
         switch (value.getValueType()) {
-            case DOUBLE: adder.withTypedValue(value.getName(), Double.valueOf(value.getValue()), value.getType());
+            case DOUBLE:
+                adder.withTypedValue(value.getName(), Double.valueOf(value.getValue()), value.getType());
                 break;
-            case INTEGER: adder.withTypedValue(value.getName(), Integer.valueOf(value.getValue()), value.getType());
+            case INTEGER:
+                adder.withTypedValue(value.getName(), Integer.valueOf(value.getValue()), value.getType());
                 break;
-            default: adder.withTypedValue(value.getName(), value.getValue(), value.getType());
+            default:
+                adder.withTypedValue(value.getName(), value.getValue(), value.getType());
         }
     }
 
@@ -97,15 +87,15 @@ public class ReportService {
         ReportEntity reportEntity = reportRepository.findById(reportId).orElseThrow(EntityNotFoundException::new);
 
         var rootReportNode = ReportNode.newRootReportNode()
-                .withMessageTemplate(reportId.toString(), reportId.toString())
-                .build();
+            .withMessageTemplate(reportId.toString(), reportId.toString())
+            .build();
 
         List<TreeReportEntity> treeReportEntities = treeReportRepository.findAllByReportIdOrderByNanos(reportEntity.getId())
             .stream()
-                .filter(tre -> StringUtils.isBlank(reportNameFilter)
-                        || tre.getName().startsWith("Root") // FIXME remove this hack when "Root" report will follow the same rules than computations and modifications
-                        || reportNameMatchingType == ReportNameMatchingType.EXACT_MATCHING && tre.getName().equals(reportNameFilter)
-                        || reportNameMatchingType == ReportNameMatchingType.ENDS_WITH && tre.getName().endsWith(reportNameFilter)).toList();
+            .filter(tre -> StringUtils.isBlank(reportNameFilter)
+                || tre.getName().startsWith("Root") // FIXME remove this hack when "Root" report will follow the same rules than computations and modifications
+                || reportNameMatchingType == ReportNameMatchingType.EXACT_MATCHING && tre.getName().equals(reportNameFilter)
+                || reportNameMatchingType == ReportNameMatchingType.ENDS_WITH && tre.getName().endsWith(reportNameFilter)).toList();
 
         treeReportEntities.forEach(treeReportEntity -> addSubReportNode(rootReportNode, treeReportEntity, withElements, severityLevels));
 
@@ -118,8 +108,8 @@ public class ReportService {
         TreeReportEntity treeReportEntity = treeReportRepository.findById(reporterId).orElseThrow(EntityNotFoundException::new);
 
         ReportNode report = ReportNode.newRootReportNode()
-                .withMessageTemplate(treeReportEntity.getIdNode().toString(), treeReportEntity.getIdNode().toString())
-                .build();
+            .withMessageTemplate(treeReportEntity.getIdNode().toString(), treeReportEntity.getIdNode().toString())
+            .build();
 
         addSubReportNode(report, treeReportEntity, true, severityLevels);
 
@@ -129,17 +119,17 @@ public class ReportService {
     private ReportNode addSubReportNode(ReportNode rootReportNdoe, TreeReportEntity subTreeReport, boolean withElements, Set<String> severityLevels) {
         // Let's find all the treeReportEntities ids that inherit from the parent treeReportEntity
         final List<UUID> treeReportEntitiesIds = treeReportRepository.findAllTreeReportIdsRecursivelyByParentTreeReport(subTreeReport.getIdNode())
-                .stream()
-                .map(UUID::fromString)
-                .toList();
+            .stream()
+            .map(UUID::fromString)
+            .toList();
 
         List<ReportElementEntity> allReportElements = null;
         if (withElements) {
             // Let's find all the reportElements that are linked to the found treeReports
             allReportElements = reportElementRepository.findAllByParentReportIdNodeInOrderByNanos(treeReportEntitiesIds)
-                    .stream()
-                    .filter(reportElementEntity -> reportElementEntity.hasSeverity(severityLevels) || reportElementEntity.getValues().isEmpty()) // reportElementEntity.getValues().isEmpty() is a hack to get the empty subreports
-                    .toList();
+                .stream()
+                .filter(reportElementEntity -> reportElementEntity.hasSeverity(severityLevels) || reportElementEntity.getValues().isEmpty()) // reportElementEntity.getValues().isEmpty() is a hack to get the empty subreports
+                .toList();
         }
 
         // We need to get the entities to have access to the dictionaries
@@ -151,7 +141,7 @@ public class ReportService {
     }
 
     private void addSubReportNode(final ReportNode rootReportNode, final TreeReportEntity rootTreeReportEntity, final List<TreeReportEntity> allTreeReports,
-                             @Nullable final List<ReportElementEntity> allReportElements) {
+                                  @Nullable final List<ReportElementEntity> allReportElements) {
         // We convert our entities to PowSyBl Reporter
         Map<UUID, Map<String, String>> treeReportEntityDictionaries = new HashMap<>(allTreeReports.size());
 
@@ -173,7 +163,7 @@ public class ReportService {
         final Map<String, String> rootDictionnary = rootTreeReportEntity.getDictionary();
         rootTreeReportEntity.getValues().add(new ReportValueEmbeddable("id", rootTreeReportEntity.getIdNode(), "ID"));
         ReportNodeAdder reportNodeAdder = rootReportNode.newReportNode()
-                .withMessageTemplate(rootTreeReportEntity.getName(), rootDictionnary.get(rootTreeReportEntity.getName()));
+            .withMessageTemplate(rootTreeReportEntity.getName(), rootDictionnary.get(rootTreeReportEntity.getName()));
         rootTreeReportEntity.getValues().forEach(value -> addTypedValue(value, reportNodeAdder));
         ReportNode subReportNode = reportNodeAdder.add();
         treeReportIdToReportNodes.put(rootTreeReportEntity.getIdNode(), subReportNode);
@@ -223,70 +213,53 @@ public class ReportService {
         return reportNode;
     }
 
-    private ReportEntity toEntity(UUID id, ReportNode reportElement) {
-        var persistedReport = reportRepository.findById(id).orElseGet(() -> reportRepository.save(new ReportEntity(id)));
-        saveAllReportElements(persistedReport, reportElement, null);
-        return persistedReport;
+    private void toEntity(UUID id, ReportNode reportElement) {
+        var persistedReport = reportNodeRepository.save(new ReportNodeEntity(id, System.nanoTime() - NANOS_FROM_EPOCH_TO_START));
+        saveAllReportElements(persistedReport, reportElement);
     }
 
-    private void saveAllReportElements(ReportEntity persistedReport, ReportNode reportNode, TreeReportEntity parentNode) {
-        // This return a list of ReportElementEntity to be saved at the end, otherwise
-        // hibernate.order_insert don't work properly since https://hibernate.atlassian.net/browse/HHH-16485 hibernate 6.2.2
-        List<ReportElementEntity> reportElementEntities = new ArrayList<>();
-        traverseReportModel(persistedReport, reportNode, parentNode, reportElementEntities);
-        reportElementRepository.saveAll(reportElementEntities);
+    private void saveAllReportElements(ReportNodeEntity parentReportNodeEntity, ReportNode reportNode) {
+        traverseReportModel(parentReportNodeEntity, reportNode);
+        reportNodeRepository.save(parentReportNodeEntity);
     }
 
-    private void traverseReportModel(ReportEntity persistedReport, ReportNode reportNode, TreeReportEntity parentNode, List<ReportElementEntity> reportElementEntities) {
-        Map<String, String> dict = new HashMap<>();
-        dict.put(reportNode.getMessageKey(), reportNode.getMessageTemplate());
+    private void traverseReportModel(ReportNodeEntity parentReportNodeEntity, ReportNode reportNode) {
+        var messageTemplateEntity = new MessageTemplateEntity(reportNode.getMessageKey(), reportNode.getMessageTemplate());
+        var reportNodeEntity = new ReportNodeEntity(
+            System.nanoTime() - NANOS_FROM_EPOCH_TO_START,
+            messageTemplateEntity,
+            createValues(reportNode),
+            parentReportNodeEntity
+        );
 
-        List<ReportValueEmbeddable> reportValueEmbeddableList = toValueEntityList(reportNode.getValues());
-        reportValueEmbeddableList.add(new ReportValueEmbeddable("severityList", severityList(reportNode), TypedValue.SEVERITY));
+        reportNodeRepository.save(reportNodeEntity);
+        reportNode.getChildren().forEach(child -> traverseReportModel(reportNodeEntity, child));
+    }
 
-        TreeReportEntity treeReportEntity = new TreeReportEntity(null, reportNode.getMessageKey(), persistedReport,
-                reportValueEmbeddableList, parentNode, dict,
-                System.nanoTime() - NANOS_FROM_EPOCH_TO_START);
-
-        treeReportRepository.save(treeReportEntity);
-
-        List<ReportNode> subReporters = reportNode.getChildren().stream().filter(report -> !report.getChildren().isEmpty()).toList();
-        IntStream.range(0, subReporters.size()).forEach(idx -> traverseReportModel(null, subReporters.get(idx), treeReportEntity, reportElementEntities));
-
-        List<ReportNode> reports = reportNode.getChildren().stream().filter(report -> report.getChildren().isEmpty()).toList();
-        IntStream.range(0, reports.size()).forEach(idx -> reportElementEntities.add(toReportElementEntity(treeReportEntity, reports.get(idx), dict)));
+    private static List<ValueEntity> createValues(ReportNode reportNode) {
+        var values = new ArrayList<>(reportNode.getValues()
+            .entrySet()
+            .stream()
+            .map(k -> new ValueEntity(k.getKey(), k.getValue().getValue().toString(), k.getValue().getType())).toList());
+        values.add(new ValueEntity("severityList", severityList(reportNode).toString(), TypedValue.SEVERITY));
+        return values;
     }
 
     private static List<String> severityList(ReportNode reportNode) {
         return reportNode.getChildren()
-                .stream()
-                .filter(report -> report.getChildren().isEmpty() && !report.getValues().isEmpty()) // reports without values are considered as subreports so we don't want them in the severity list
-                .map(report -> report.getValues().get("reportSeverity"))
-                .map(severity -> severity == null ? SeverityLevel.UNKNOWN.toString() : SeverityLevel.fromValue(Objects.toString(severity.getValue())).toString())
-                .distinct().toList();
-    }
-
-    private ReportElementEntity toReportElementEntity(TreeReportEntity parentReport, ReportNode report, Map<String, String> dict) {
-        dict.put(report.getMessageKey(), report.getMessageTemplate());
-        return new ReportElementEntity(null, parentReport,
-            System.nanoTime() - NANOS_FROM_EPOCH_TO_START,
-            report.getMessageKey(), toValueEntityList(report.getValues()));
-    }
-
-    private List<ReportValueEmbeddable> toValueEntityList(Map<String, TypedValue> values) {
-        return values.entrySet().stream().map(this::toValueEmbeddable).collect(Collectors.toList());
-    }
-
-    private ReportValueEmbeddable toValueEmbeddable(Map.Entry<String, TypedValue> entryValue) {
-        return new ReportValueEmbeddable(entryValue.getKey(), entryValue.getValue().getValue(), entryValue.getValue().getType());
+            .stream()
+            .filter(report -> report.getChildren().isEmpty() && !report.getValues().isEmpty()) // reports without values are considered as subreports so we don't want them in the severity list
+            .map(report -> report.getValues().get("reportSeverity"))
+            .map(severity -> severity == null ? ReportSeverity.UNKNOWN.toString() : ReportSeverity.valueOf(Objects.toString(severity.getValue())).toString())
+            .distinct().toList();
     }
 
     @Transactional
     public void createReport(UUID id, ReportNode reportNode) {
-        Optional<ReportEntity> reportEntity = reportRepository.findById(id);
-        if (reportEntity.isPresent()) {
+        Optional<ReportNodeEntity> reportNodeEntity = reportNodeRepository.findById(id);
+        if (reportNodeEntity.isPresent()) {
             LOGGER.debug("Reporter {} present, append ", reportNode.getMessage());
-            saveAllReportElements(reportEntity.get(), reportNode, null);
+            saveAllReportElements(reportNodeEntity.get(), reportNode);
         } else {
             LOGGER.debug("Reporter {} absent, create ", reportNode.getMessage());
             toEntity(id, reportNode);
@@ -299,33 +272,33 @@ public class ReportService {
     private void deleteRoot(UUID rootTreeReportId) {
         AtomicReference<Long> startTime = new AtomicReference<>();
         startTime.set(System.nanoTime());
-        /**
+        /*
          * Groups tree report node IDs by level for batch deletion.
          * This is necessary otherwise H2 throws JdbcSQLIntegrityConstraintViolationException when issuing the delete query with 'where id in (x1,x2,...)' (we use h2 for unit tests).
          * For postgres, this is not necessary if all the ids are in the same delete query, but would be a problem
          * if we decided to partition the deletes in smaller batches in multiple transactions (in multiple deletes in one transaction we could defer the checks at the commit with 'SET CONSTRAINTS DEFERRED')
          */
         Map<Integer, List<UUID>> treeReportIdsByLevel = treeReportRepository.getSubReportsNodesWithLevel(rootTreeReportId)
-                .stream()
-                .collect(Collectors.groupingBy(
-                        result -> (Integer) result[1],
-                        Collectors.mapping(
-                                result -> UUID.fromString((String) result[0]),
-                                Collectors.toList()
-                        )
-                ));
+            .stream()
+            .collect(Collectors.groupingBy(
+                result -> (Integer) result[1],
+                Collectors.mapping(
+                    result -> UUID.fromString((String) result[0]),
+                    Collectors.toList()
+                )
+            ));
 
         // Deleting the report elements in subsets because they can exceed the limit of 64k elements in the IN clause
         List<UUID> groupedTreeReportIds = treeReportIdsByLevel.values().stream().flatMap(Collection::stream).collect(Collectors.toList());
         List<UUID> reportElementIds = reportElementRepository.findIdReportByParentReportIdNodeIn(groupedTreeReportIds)
-                .stream()
-                .map(ReportElementEntity.ProjectionIdReport::getIdReport)
-                .toList();
+            .stream()
+            .map(ReportElementEntity.ProjectionIdReport::getIdReport)
+            .toList();
         Lists.partition(reportElementIds, SQL_QUERY_MAX_PARAM_NUMBER)
-                .forEach(ids -> {
-                    reportElementRepository.deleteAllReportElementValuesByIdReportIn(ids);
-                    reportElementRepository.deleteAllByIdReportIn(ids);
-                });
+            .forEach(ids -> {
+                reportElementRepository.deleteAllReportElementValuesByIdReportIn(ids);
+                reportElementRepository.deleteAllByIdReportIn(ids);
+            });
 
         // Delete all the report elements values and dictionaries since doesn't have any parent-child relationship
         treeReportRepository.deleteAllTreeReportValuesByIdNodeIn(groupedTreeReportIds);
@@ -333,8 +306,8 @@ public class ReportService {
 
         // Deleting the tree reports level by level, starting from the highest level
         treeReportIdsByLevel.entrySet().stream()
-                .sorted(Map.Entry.<Integer, List<UUID>>comparingByKey().reversed())
-                .forEach(entry -> treeReportRepository.deleteAllByIdNodeIn(entry.getValue()));
+            .sorted(Map.Entry.<Integer, List<UUID>>comparingByKey().reversed())
+            .forEach(entry -> treeReportRepository.deleteAllByIdNodeIn(entry.getValue()));
         LOGGER.info("The report and tree report elements of '{}' has been deleted in {}ms", rootTreeReportId, TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - startTime.get()));
     }
 
@@ -343,9 +316,9 @@ public class ReportService {
         Objects.requireNonNull(id);
         List<TreeReportEntity> allTreeReportsInReport = treeReportRepository.findAllByReportId(id);
         List<TreeReportEntity> filteredTreeReportsInReport = allTreeReportsInReport
-                .stream()
-                .filter(tre -> StringUtils.isBlank(reportType) || tre.getName().endsWith(reportType))
-                .toList();
+            .stream()
+            .filter(tre -> StringUtils.isBlank(reportType) || tre.getName().endsWith(reportType))
+            .toList();
         filteredTreeReportsInReport.forEach(tre -> deleteRoot(tre.getIdNode()));
 
         if (filteredTreeReportsInReport.size() == allTreeReportsInReport.size()) {
@@ -362,6 +335,7 @@ public class ReportService {
         reportElementRepository.deleteAll();
         treeReportRepository.deleteAll();
         reportRepository.deleteAll();
+        reportNodeRepository.deleteAll();
     }
 
     @Transactional
